2014-12-09  Uros Bizjak  <ubizjak@gmail.com>

	PR bootstrap/64213
	Revert:
	2014-11-28  H.J. Lu  <hongjiu.lu@intel.com>

	PR rtl-optimization/64037
	* combine.c (setup_incoming_promotions): Pass the argument
	before any promotions happen to promote_function_mode.

2014-12-08  Richard Biener  <rguenther@suse.de>

	Backport from 4.9 branch
	* configure.ac
	(ac_has_isl_schedule_constraints_compute_schedule):
	New check.
	* graphite-clast-to-gimple.c: For ISL 0.14, include deprecate headers.
	* graphite-interchange.c: Ditto.
	* graphite-poly.c: Ditto.
	* graphite-sese-to-poly.c: Ditto.
	* graphite-optimize-isl.c (getScheduleForBandList): Ditto.
	Conditionally use ISL 0.13+ functions.
	* config.in: Regenerate.
	* configure: Regenerate.

2014-12-07  Oleg Endo  <olegendo@gcc.gnu.org>

	Backport from mainline
	2014-12-07  Oleg Endo  <olegendo@gcc.gnu.org>

	PR target/50751
	* config/sh/sh.md (extendqihi2): Allow only for TARGET_SH1.

2014-12-05  H.J. Lu  <hongjiu.lu@intel.com>

	Backport from mainline
	2014-11-28  H.J. Lu  <hongjiu.lu@intel.com>

	PR rtl-optimization/64037
	* combine.c (setup_incoming_promotions): Pass the argument
	before any promotions happen to promote_function_mode.

2014-12-04  Shanyao Chen  <chenshanyao@huawei.com>

	Backport from mainline
	2014-11-20  Ramana Radhakrishnan  <ramana.radhakrishnan@arm.com>

	PR target/59593
	* config/arm/arm.md (*movhi_insn): Use right formatting
	for immediate.

	2014-11-19  Felix Yang  <felix.yang@huawei.com>
	            Shanyao Chen  <chenshanyao@huawei.com>

	PR target/59593
	* config/arm/arm.md (define_attr "arch"): Add v6t2.
	(define_attr "arch_enabled"): Add test for the above.
	(*movhi_insn_arch4): Add new alternative.

2014-12-04  Jakub Jelinek  <jakub@redhat.com>

	PR c++/56493
	* convert.c (convert_to_real, convert_to_expr, convert_to_complex):
	Handle COMPOUND_EXPR.

2014-12-02  Ulrich Weigand  <Ulrich.Weigand@de.ibm.com>

	PR target/64115
	* config/rs6000/rs6000.c (rs6000_delegitimize_address): Remove